Fix sponsor button alignment mobile

--- a/themes/trc/sass/_page-templates.scss
+++ b/themes/trc/sass/_page-templates.scss
@@ -1688,6 +1688,12 @@
       padding: 1rem 1.5rem;
       text-transform: uppercase;
     }
+
+    .sponsor-student {
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+    }
   }
  }
 }
